--- a/chatbot-ui/src/app/app.component.html
+++ b/chatbot-ui/src/app/app.component.html
@@ -1,3 +1,7 @@
+<link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet" />
+<style>
+  @import url("https://fonts.cdnfonts.com/css/satoshi");
+</style>
 <div class="chat-assistant">
   <div
     class="chat-button"
